# VoxelGame

./: .gitignore  CMakeLists.txt  README.md  pack_order.json
.codex/environments/: environment.toml
.github/scripts/: sync_issues_to_notion.js
.github/workflows/: cmake.yml  sync_issues_to_notion.yml
cmake/: Dependencies.cmake  Packaging.cmake  Targets.cmake
docs/: Agriculture.md  Biomes.md  ConnectedTextures.md  EngineRoadmap.md  MODELS_AND_TEXTURES.md  PACKS.md  diligent-integration.md
documentation/: Multiplayer.md  PackSchema.md
engine/scripts/: 00_logger.js  01_platform.js  02_resources.js  03_startup.js  04_startup_events.js  05_runtime.js
include/app/client/: ClientNetworkSession.hpp  ClientOptions.hpp  ClientRuntimeBridge.hpp  ClientUiController.hpp
include/client/game/: Game.hpp
include/client/pack/: AssetPackManager.hpp
include/client/render/: BlockModel.hpp  DiligentRenderBackend.hpp  Mesh.hpp  ModelManager.hpp  OpenGLCompat.hpp  OpenGLRenderBackend.hpp  RenderBackend.hpp  RenderResource.hpp  Renderer.hpp  ShaderProgram.hpp  TextureManager.hpp
include/client/ui/: GameUI.hpp
include/common/: Entity.hpp  Input.hpp  Math.hpp  OSUtils.hpp  Player.hpp
include/common/data/: BiomeDefinition.hpp  DataComponents.hpp  GameData.hpp  JsonValue.hpp
include/common/diagnostics/: EngineDiagnostics.hpp
include/common/jobs/: JobSystem.hpp
include/common/network/: NetworkManager.hpp
include/common/pack/: JsHelpers.hpp  Pack.hpp  PackManager.hpp  ScriptManager.hpp
include/common/player/: Inventory.hpp
include/common/world/: BiomeDefinition.hpp  Chunk.hpp  ChunkTaskQueue.hpp  Config.hpp  SpatialHash.hpp  TerrainGenerator.hpp  World.hpp  WorldPersistence.hpp  WorldSimulation.hpp
include/launcher/: LauncherCore.hpp
include/platform/glfw/: GlfwClientWindow.hpp  GlfwInput.hpp
include/server/: HeadlessServer.hpp  ServerBootstrap.hpp
packs/base/assets/models/blocks/: crafting_table.json  oak_log.json  oak_planks.json  sand.json
packs/base/assets/textures/blocks/: crafting_table_side.ppm  crafting_table_top.ppm  oak_log_side.ppm  oak_log_top.ppm  oak_planks.ppm  sand.ppm
packs/base/scripts/: main.js
packs/base/scripts/startup/: blocks.js  items.js  recipes.js
packs/example_pack/: pack.json
packs/example_pack/data/blocks/: copper_ore.json
packs/example_pack/scripts/startup/: startup.js
packs/types/: pack.json  pack.schema.json  schema-dump.json  voxel.code-snippets  voxel.d.ts
platform/apple/TerralieLauncherApp/TerralieLauncherApp/: LauncherAppDelegate.swift  TERRALITELauncher.swift
platform/apple/TerralieLauncherApp/TerralieLauncherApp.xcodeproj/: project.pbxproj
platform/apple/TerralieLauncherApp/TerralieLauncherApp.xcodeproj/project.xcworkspace/xcuserdata/kalob.xcuserdatad/: UserInterfaceState.xcuserstate
platform/apple/TerralieLauncherApp/TerralieLauncherApp.xcodeproj/xcuserdata/kalob.xcuserdatad/xcschemes/: xcschememanagement.plist
platform/apple/TerralieLauncherApp/TerralieLauncherApp/Models/: LauncherSection 2.swift
platform/apple/TerralieLauncherApp/TerralieLauncherApp/ViewModels/: LauncherViewModel.swift
platform/apple/TerralieLauncherApp/TerralieLauncherApp/Views/: AccountsView 2.swift  LaunchView.swift  SharedViews 2.swift  VersionsView.swift
platform/apple/TerraliteLauncherSwift/: Package.swift
platform/apple/TerraliteLauncherSwift/.swiftpm/xcode/package 2.xcworkspace/xcuserdata/kalob.xcuserdatad/: UserInterfaceState.xcuserstate
platform/apple/TerraliteLauncherSwift/.swiftpm/xcode/xcuserdata/kalob.xcuserdatad/xcschemes/: xcschememanagement.plist
platform/apple/TerraliteLauncherSwift/Sources/TerraliteLauncherSwift/App/: TerraliteLauncherSwiftApp.swift
platform/apple/TerraliteLauncherSwift/Sources/TerraliteLauncherSwift/Models/: AccountProfile.swift  GameVersion.swift  LauncherState.swift
platform/apple/TerraliteLauncherSwift/Sources/TerraliteLauncherSwift/Services/: LauncherCore.swift  LauncherPaths.swift
platform/apple/TerraliteLauncherSwift/Sources/TerraliteLauncherSwift/Stores/: LauncherStore.swift
platform/apple/TerraliteLauncherSwift/Sources/TerraliteLauncherSwift/Support/: String+Launcher.swift
platform/apple/TerraliteLauncherSwift/Sources/TerraliteLauncherSwift/Views/: ContentView.swift
platform/apple/TerraliteLauncherSwift/Sources/TerraliteLauncherSwiftStandalone/: TerraliteLauncherSwiftStandaloneApp.swift
platform/apple/TerraliteLauncherSwift/Tests/TerraliteLauncherSwiftTests/: LauncherCoreTests.swift
scripts/: build_and_run 3.sh  build_and_run.sh  run-swift-launcher 2.sh
src/: main.cpp
src/app/client/: ClientMain.cpp  ClientNetworkSession.cpp  ClientOptions.cpp  ClientRuntimeBridge.cpp  ClientUiController.cpp
src/app/launcher/: LauncherMain.cpp
src/app/server/: ServerMain.cpp
src/client/game/: Game.cpp  GameBlocks.cpp  GameInternal.hpp  GameLifecycle.cpp  GameRender.cpp  GameUpdate.cpp
src/client/pack/: AssetPackManager.cpp
src/client/render/: DiligentRenderBackend.cpp  Mesh.cpp  ModelManager.cpp  OpenGLRenderBackend.cpp  Renderer.cpp  ShaderProgram.cpp  TextureManager.cpp
src/client/ui/: GameUI.cpp  RmlUi_Renderer_GL2.cpp
src/common/: Math.cpp  OSUtils.cpp  Player.cpp  PlayerShared.cpp
src/common/data/: DataComponents.cpp  GameData.cpp  JsonValue.cpp
src/common/diagnostics/: EngineDiagnostics.cpp
src/common/jobs/: JobSystem.cpp
src/common/network/: NetworkManager.cpp
src/common/pack/: Pack.cpp  PackManager.cpp  ScriptBindingCustom.cpp  ScriptBindingsCustom.cpp  ScriptManager.cpp
src/common/player/: Inventory.cpp
src/common/world/: BiomeDefinition.cpp  TerrainGenerator.cpp  World.cpp  WorldPersistence.cpp  WorldSimulation.cpp
src/launcher/: LauncherCore.cpp
src/platform/glfw/: GlfwClientWindow.cpp  GlfwInput.cpp
src/server/: HeadlessServer.cpp  ServerBootstrap.cpp  ServerMain.cpp
tests/: DataComponentTests.cpp  GameDataTests.cpp  JobSystemTests.cpp  LauncherCoreTests.cpp  NetworkConnectionTests.cpp
tools/: run-clang-tidy.ps1
tools/codegen/: generate.js
tools/codegen/schema/: block.js  tag.js
